Created groups model, some controllers and groups page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,6 +102,15 @@ a.alert-danger:hover {
   border-color: #FF0000;
 }
 
+a.alert-warning {
+  border-color: #FFA500;
+}
+
+a.alert-warning:hover {
+  color: #FF0000;
+  border-color: #FF0000;
+}
+
 a.list {
   margin: 5px 0;
   display: inline-block;
@@ -174,6 +183,14 @@ input[type="file"] {
   font-size: 15px;
 }
 
+select {
+  padding: 5px;
+  width: 100%;
+  border: 1px solid var(--primary-color);
+  outline: none;
+  margin: 10px 0;
+}
+
 input:active, input:focus, textarea:active, textarea:focus {
   outline: none;
 }
@@ -235,6 +252,7 @@ table a {
 .link-wrapper {
   display: inline-block;
   margin-right: 30px;
+  margin-bottom: 5px;
 }
 
 .content-block {
@@ -315,6 +333,10 @@ table a {
 
 .alert-danger {
   color: #DD0000;
+}
+
+.alert-warning {
+  color: #FFA500;
 }
 
 .big-fucking-span {
@@ -447,7 +469,7 @@ table a {
 #login-block {
   display: inline-block;
   vertical-align: top;
-  margin-top: 60px;
+  margin-top: 50px;
   float: right;
   margin-right: 60px;
   text-align: right;
@@ -485,7 +507,8 @@ table a {
 #header-links {
   display: inline-block;
   margin-left: 130px;
-  margin-top: 60px;
+  margin-top: 50px;
   vertical-align: top;
   font-size: 15pt;
+  line-height: 1.5;
 }
