--- a/templates/group.html
+++ b/templates/group.html
@@ -46,6 +46,10 @@
   {% if current_user.is_authenticated and current_user.is_admin() %}
     <div class="normal-block" id="admin-features">
       <br>
+      <a href="/groups/{{group.id}}/add_user" class="list">
+        Добавить пользователя
+      </a>
+      <br>
       <a href="/groups/{{group.id}}/edit" class="list">
         Редактировать группу
       </a>
