--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
             if (path == key) {
               document.write(value);
             } else {
-              document.write(`<a href='${key}' class='alert-warning'>${value}</a>`);
+              document.write(`<a href='${key}' class='alert-admin'>${value}</a>`);
             }
             document.write("</div>")
           }
