--- a/templates/contest.html
+++ b/templates/contest.html
@@ -75,11 +75,11 @@
   {% endif %}
   {% if current_user.is_authenticated and current_user.is_admin() %}
     <div class="normal-block" id="admin-features">
-      <a href="/contests/{{ contest.id }}/add_problem" class="list">
+      <a href="/contests/{{ contest.id }}/add_problem" class="list alert-admin">
         Добавить задачу
       </a>
       <br>
-      <a href="/contests/{{ contest.id }}/edit" class="list">
+      <a href="/contests/{{ contest.id }}/edit" class="list alert-admin">
         Редактировать контест
       </a>
       <br>
