--- a/templates/problems.html
+++ b/templates/problems.html
@@ -57,7 +57,7 @@
   </div>
   {% if current_user.is_authenticated and current_user.is_admin() %}
     <div class="normal-block" id="admin-features">
-      <a href="/problems/create" class="list">
+      <a href="/problems/create" class="list alert-admin">
         Создать задачу
       </a>
     </div>
