--- a/templates/contests.html
+++ b/templates/contests.html
@@ -67,7 +67,7 @@
   </div>
   {% if current_user.is_authenticated and current_user.is_admin() %}
     <div class="normal-block" id="admin-features">
-      <a href="/contests/create" class="list">
+      <a href="/contests/create" class="list alert-admin">
         Создать контест
       </a>
     </div>
