--- a/templates/group.html
+++ b/templates/group.html
@@ -46,11 +46,11 @@
   {% if current_user.is_authenticated and current_user.is_admin() %}
     <div class="normal-block" id="admin-features">
       <br>
-      <a href="/groups/{{group.id}}/add_user" class="list">
+      <a href="/groups/{{group.id}}/add_user" class="list alert-admin">
         Добавить пользователя
       </a>
       <br>
-      <a href="/groups/{{group.id}}/edit" class="list">
+      <a href="/groups/{{group.id}}/edit" class="list alert-admin">
         Редактировать группу
       </a>
       <br>
