--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
     </div>
     <div id="login-block">
       {% if current_user.is_authenticated %}
-        Вы вошли как <b>{{ current_user.login }}</b><br>
+        Вы вошли как <a href="/users/{{ current_user.id }}"><b>{{ current_user.login }}</b></a><br>
         <script>
           document.write(`<a href="/logout?next=${path}">Выйти</a><br>`)
         </script>
@@ -85,7 +85,7 @@
   </main>
   <footer>
     <div id="credits">
-      Pycon by Adam Arutyunov.<br>
+      Pycon 0.9.1 by Adam Arutyunov.<br>
       Final Yandex.Lyceum 2020 project.<br>
     </div>
     <div id="footer-div"></div>
