--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
           '/': "Главная",
           '/problems': "Задачи",
           '/contests': "Контесты",
-          '/raw_submissions': "Мои посылки"
+          '/submissions': "Мои посылки"
         },
 
         'admin_links':
