--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,7 +194,7 @@ input[type="file"] {
 
 select {
   padding: 5px;
-  width: 100%;
+  width: 250px;
   border: 1px solid var(--primary-color);
   outline: none;
   margin: 10px 0;
