Basic C# support, codemirror changes highlight in submission page

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
     <script src="/static/js/codemirror.js"></script>
     <script src="/static/js/python.js"></script>
+    <script src="/static/js/clike.js"></script>
     <title>{{title}}</title>
     </head>
 <body>
