All users admin page

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,22 @@
     <script src="/static/js/codemirror.js"></script>
     <script src="/static/js/python.js"></script>
     <script src="/static/js/clike.js"></script>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+       m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+       (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+       ym(67179898, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true
+       });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/67179898" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+    
     <title>{{title}}</title>
     </head>
 <body>
@@ -31,8 +47,9 @@
 
         'admin_links':
           {
-            '/all_submissions': "Все посылки",
-            '/groups': "Группы"
+            '/users': "Пользователи",
+            '/groups': "Группы",
+            '/all_submissions': "Все посылки"
           }
         }
 
