Renamed templates folders. Pycon.py decomposed to blueprints

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,16 +40,16 @@
         let dct = {
         'links': {
           '/': "Главная",
-          '/problems': "Задачи",
-          '/contests': "Контесты",
-          '/submissions': "Мои посылки"
+          '/problems/': "Задачи",
+          '/contests/': "Контесты",
+          '/submissions/': "Мои посылки"
         },
 
         'admin_links':
           {
             '/users': "Пользователи",
             '/groups': "Группы",
-            '/all_submissions': "Все посылки"
+            '/submissions/all': "Все посылки"
           }
         }
 
