Compilation logic fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,8 @@
 
         'admin_links':
           {
-            '/users': "Пользователи",
-            '/groups': "Группы",
+            '/users/': "Пользователи",
+            '/groups/': "Группы",
             '/submissions/all': "Все посылки"
           }
         }
