--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <link href="/static/css/codemirror.css" rel="stylesheet">
     <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
+    <script src="/static/js/jquery-3.5.1.min.js"></script>
     <script src="/static/js/codemirror.js"></script>
     <script src="/static/js/python.js"></script>
     <script src="/static/js/clike.js"></script>
+    <script src="/static/js/main.js"></script>
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
