--- a/templates/contest/contest.html
+++ b/templates/contest/contest.html
@@ -44,9 +44,9 @@
             <tr>
                 <td class="id-td">
                 {% if current_user.is_authenticated and current_user.get_contest_association(contest) %}
-                  {% if problem in current_user.solved_problems %}
+                  {% if current_user.is_problem_solved(problem) == True %}
                     <div class="problem-status solved-problem-div">
-                  {% elif problem in current_user.unsolved_problems %}
+                  {% elif current_user.is_problem_solved(problem) == False %}
                     <div class="problem-status unsolved-problem-div">
                   {% endif %}
                   </div>
