--- a/templates/base.html
+++ b/templates/base.html
@@ -21,11 +21,11 @@
        ym(67179898, "init", {
             clickmap:true,
             trackLinks:true,
-            accurateTrackBounce:true
+            accurateTrackBounce:true,
+            webvisor:true
        });
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/67179898" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
 
     <title>{{title}}</title>
     </head>
