--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-
   <h3 {% if user.is_admin() %}class="alert-admin"{% endif %}>
     {% if user.is_admin() %}Администратор{% else %}Пользователь{% endif %}
   </h3>
   <h1 {% if user.is_admin() %}class="alert-admin"{% endif %} style="font-size: 80pt">{{ user.login }}</h1>
 
-  <div class="small-block" style="line-height: 2">
+  <img src="{{ user.userpic_uri }}" style="width: 300px; height: 300px; margin: 20px 0;"
+       onerror="this.parentElement.removeChild(this);">
+
+  <div class="small-block" style="line-height: 1.5">
     <h4>#{{ user.id }}</h4>
     Группа:
     {% if user.group %}
@@ -24,5 +26,29 @@
     Зарегистрирован <b>{{ user.registration_date.strftime("%d.%m.%Y") }}</b>
     <br>
     Задач решено: <b>{{ user.solved_problems|length }}</b>
+  </div>
+  <div class="small-block">
+    {% if user == current_user %}
+      <form method="post" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+        {{ form.csrf_token }}
+
+        <label class="label">
+          <span class="primary-button">Загрузить юзерпик</span>
+          {{ form.image(class="nodisp", onchange="this.form.submit()") }}
+        </label>    
+        {% if user.userpic_uri %}
+          <a href="/users/{{ user.id }}/delete_userpic">Удалить</a>
+        {% endif %}
+
+        <br><br>
+
+        {% for error in form.image.errors %}
+          <p class="alert alert-danger" role="alert">
+              {{ error }}
+          </p>
+        {% endfor %}
+      </form>
+    {% endif %}
   </div>
 {% endblock %}
