Feedback form, added env.py in .gitignore

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <br><br>
   Чтобы решать <a href="/problems">задачи</a> и принимать участие в <a href="/contests">контестах</a>, вам нужно <a href="/login">войти в систему</a>,<br>а если нет аккаунта — <a href="/register">зарегистрироваться</a>.
   <br><br>
-  Сейчас платформа находится в стадии тестирования. Оставить обратную связь можно <a onclick="alert('Пока нельзя! :—)')">здесь</a>.
+  Сейчас платформа находится в стадии тестирования. Проблемы, вопросы, предложения — <a href="/feedback">сюда</a>.
   <br><br>
 
   {% if current_user.is_authenticated and current_user.is_admin() %}
