Created permissions and roles

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -112,7 +112,7 @@ a.alert-warning:hover {
 }
 
 a.alert-admin {
-  border-color: #9D00FF;
+  border-color: #660099;
 }
 
 a.alert-admin:hover {
@@ -350,7 +350,7 @@ table a {
 }
 
 .alert-admin {
-  color: #9D00FF;
+  color: #660099;
 }
 
 .big-fucking-span {
